--- a/src/app/design/frontend/base/default/template/magesetup/paypal/express/review.phtml
+++ b/src/app/design/frontend/base/default/template/magesetup/paypal/express/review.phtml
@@ -87,15 +87,14 @@ $shippingAddress = $this->getShippingAddress();
         </div>
     <?php endif; ?>
     </div>
-
-    <div class="info-set">
-        <h2 class="legend"><?php echo $this->__('Items in Your Shopping Cart') ?><span class="separator"> | </span><a href="<?php echo $this->getUrl('checkout/cart') ?>"><?php echo $this->__('Edit Shopping Cart') ?></a></h2>
-        <div id="details-reload">
-            <?php echo $this->getChildHtml('details') ?>
+        <div id="checkout-review-table-wrapper">
+        <div class="info-set">
+            <h2 class="legend"><?php echo $this->__('Items in Your Shopping Cart') ?><span class="separator"> | </span><a href="<?php echo $this->getUrl('checkout/cart') ?>"><?php echo $this->__('Edit Shopping Cart') ?></a></h2>
+            <div id="details-reload">
+                <?php echo $this->getChildHtml('details') ?>
+            </div>
         </div>
-    </div>
-    <?php echo $this->getChildHtml('items_after') ?>
-        
+        <?php echo $this->getChildHtml('items_after') ?>
         <div class="buttons-set buttons-set-order" id="review-buttons-container">
             <button type="button" id="review_button" value="<?php echo $this->__('Place Order') ?>" class="button btn-checkout"><span><span><?php echo $this->__('Place Order') ?></span></span></button>
             <button type="button" id="review_submit" value="<?php echo $this->__('Place Order') ?>" class="button btn-checkout"><span><span><?php echo $this->__('Place Order') ?></span></span></button>
@@ -103,6 +102,7 @@ $shippingAddress = $this->getShippingAddress();
             <span class="please-wait" id="review-please-wait" style="display:none;">
                 <img src="<?php echo $this->getSkinUrl('images/opc-ajax-loader.gif') ?>" alt="<?php echo $this->__('Submitting order information...') ?>" title="<?php echo $this->__('Submitting order information...') ?>" class="v-middle" /> <?php echo $this->__('Submitting order information...') ?>
             </span>
+        </div>
         </div>
     </form>
 </div>
