--- a/src/app/locale/en_US/template/magesetup/block/revocation.html
+++ b/src/app/locale/en_US/template/magesetup/block/revocation.html
@@ -1,2 +1,3 @@
 <!--@title Revocation @-->
 <h2><i>Please insert your Declaration of Revocation here.</i></h2>
+<p><a href="{{store url='revocation_form'}}">Revocation Form</a></p>
