--- a/src/app/locale/de_DE/template/magesetup/block/revocation.html
+++ b/src/app/locale/de_DE/template/magesetup/block/revocation.html
@@ -1,2 +1,3 @@
 <!--@title Widerrufsbelehrung @-->
 <h2><i>Fügen Sie hier Ihre vollständige Widerrufsbelehrung ein.</i></h2>
+<p><a href="{{store url='revocation_form'}}">Widerrufsformular</a></p>
