--- a/src/app/locale/de_CH/template/magesetup/block/revocation.html
+++ b/src/app/locale/de_CH/template/magesetup/block/revocation.html
@@ -1,3 +1,9 @@
 <!--@title Widerrufsbelehrung @-->
-<h2><i>Fügen Sie hier Ihre vollständige Widerrufsbelehrung ein.</i></h2>
-<p><a href="{{store url='revocation_form'}}">Widerrufsformular</a></p>
+<h3 style="color:red;">
+    <em>Fügen Sie hier Ihre Widerrufsbelehrung ein. Vermeiden Sie widersprüchliche Angaben zum Widerrufsrecht auf weiteren Infoseiten.</em>
+</h3>
+<p style="font-style:italic; color:red;">
+    ACHTUNG: Ab/seit dem 13.06.2014 entfällt die Option Rückgaberecht aufgrund des Inkrafttretens der Verbraucherrechterichtlinie VRRL.
+</p>
+<hr/>
+{{block type="cms/block" block_id="revocation_form"}}
