--- a/src/app/locale/it_IT/template/magesetup/block/revocation.html
+++ b/src/app/locale/it_IT/template/magesetup/block/revocation.html
@@ -1,2 +1,9 @@
 <!--@title Diritto di recesso @-->
-<h2><i>Inserite qui le informazioni sul diritto di recesso.</i></h2>
+<h3 style="color:red;">
+    <em>Inserite qui le informazioni sul diritto di recesso.</em>
+</h3>
+<p style="font-style:italic; color:red;">
+    ATTENTION: From / since June 13th 2014 the return policy option is canceled due to the adoption of the Consumer Rights Directive VRRL.
+</p>
+<hr/>
+{{block type="cms/block" block_id="revocation_form"}}
