--- a/src/app/locale/it_IT/template/magesetup/block/revocation_form.html
+++ b/src/app/locale/it_IT/template/magesetup/block/revocation_form.html
@@ -1,47 +1,54 @@
-<!--@title Formular zur Widerrufsbelehrung @-->
-<pre>Muster-Widerrufsformular
+<!--@title Withdrawal Form @-->
+<h3 style="font-style:italic; color:red;">Model withdrawal form</h3>
 
-Wenn Sie den Vertrag widerrufen wollen, dann füllen Sie bitte dieses Formular aus und senden Sie es zurück.
+<p style="font-style:italic; color:red;">
+    According to recent right the consumer has to be informed about the withdrawl form before placing his order. Not to be confused with the withdrawl declaration and needs to be used independently of the declaration. Furhtermore the withdrawl form has to be provided to the consumer on a durable medium. It is appropriate to place this form beneath the withdrawl declaration so that the counsumer receives the withdrawl declaration and the withdrawl form in one document.
+<hr/>
+</p>
 
+<p>
+    If you want to revoke the contract, then please fill out this form and send it back to us.
+</p>
+<p>
+    To<br/>
+    <strong>
+        {{block type="magesetup/imprint_field" value="shop_name"}}<br/>
+        {{block type="magesetup/imprint_field" value="company_first"}}<br/>
+        {{block type="magesetup/imprint_field" value="street"}}<br/>
+        {{block type="magesetup/imprint_field" value="zip"}} {{block type="magesetup/imprint_field" value="city"}}
+    </strong>
+</p>
+<p>
+    by fax to: <strong>{{block type="magesetup/imprint_field" value="fax"}}</strong><br/>
+    or by email to: <strong>{{block type="magesetup/imprint_field" value="email"}}</strong>
+</p>
+<p>
+    I/ We<sup>*</sup> revoke the concluded me/ us contract for the purchase of the following products/ the provision of the following service<sup>*</sup>.
+</p>
+<p style="min-height:200px;">
+    &nbsp;
+</p>
 
-An 
-{{block type="magesetup/imprint_field" value="shop_name"}}
-{{block type="magesetup/imprint_field" value="company_first"}}
-{{block type="magesetup/imprint_field" value="street"}}
-{{block type="magesetup/imprint_field" value="zip"}} {{block type="magesetup/imprint_field" value="city"}}
-
-per Fax an: {{block type="magesetup/imprint_field" value="fax"}}
-oder per E-Mail an: {{block type="magesetup/imprint_field" value="email"}}
-
-
-Hiermit widerrufe(n) ich/wir (*) den von mir/uns (*) abgeschlossenen Vertrag
-    über den Kauf der folgenden Waren (*)/
-die Erbringung der folgenden Dienstleistung (*)
-
-__________________________________________________
-__________________________________________________
-__________________________________________________
-__________________________________________________
-__________________________________________________
-__________________________________________________
-__________________________________________________
-__________________________________________________
-
-
-__________________________________________________
-Bestellt am (*)/erhalten am (*)
-
-__________________________________________________
-Name des/der Verbraucher(s)
-
-__________________________________________________
-Anschrift des/der Verbraucher(s)
-
-__________________________________________________
-Unterschrift des/der Verbraucher(s)
-(nur bei Mitteilung auf Papier)
-
-__________________________________________________
-Datum
-
-(*) Unzutreffendes streichen.</pre>
+<p style="padding-top:14px;">
+<hr style="width:50%;">
+Order date<sup>*</sup>/ received date<sup>*</sup>
+</p>
+<p style="padding-top:14px;">
+<hr style="width:50%;">
+Name of the consumer
+</p>
+<p style="padding-top:14px;">
+<hr style="width:50%;">
+Address of the consumer
+</p>
+<p style="padding-top:14px;">
+<hr style="width:50%;">
+Signature of the consumer <em>(only required for communication on paper)</em>
+</p>
+<p style="padding-top:14px;">
+<hr style="width:50%;">
+Date
+</p>
+<p>
+    <sup>*</sup> Please remove if not applicable.
+</p>
