--- a/src/app/locale/ru_RU/template/magesetup/block/revocation.html
+++ b/src/app/locale/ru_RU/template/magesetup/block/revocation.html
@@ -1,2 +1,9 @@
 <!--@title Отмена @-->
-<h2><i>Пожалуйста, впишите сюда ваши условия отмены.</i></h2>
+<h3 style="color:red;">
+    <em>Пожалуйста, впишите сюда ваши условия отмены.</em>
+</h3>
+<p style="font-style:italic; color:red;">
+    ATTENTION: From / since June 13th 2014 the return policy option is canceled due to the adoption of the Consumer Rights Directive VRRL.
+</p>
+<hr/>
+{{block type="cms/block" block_id="revocation_form"}}
