[+TASK] Add english translation for checkout conditions (checkboxes), add link to revocation form on revocation page

--- a/src/app/locale/de_CH/template/magesetup/block/revocation.html
+++ b/src/app/locale/de_CH/template/magesetup/block/revocation.html
@@ -6,4 +6,4 @@
     ACHTUNG: Ab/seit dem 13.06.2014 entfällt die Option Rückgaberecht aufgrund des Inkrafttretens der Verbraucherrechterichtlinie VRRL.
 </p>
 <hr/>
-{{block type="cms/block" block_id="revocation_form"}}
+<p>Wenn Sie den Vertrag widerrufen wollen, dann <a href="{{store url='revocation_form'}}">füllen Sie bitte dieses Formular aus</a> und senden Sie es zurück.</p>
