--- a/src/app/locale/fr_FR/template/magesetup/block/revocation.html
+++ b/src/app/locale/fr_FR/template/magesetup/block/revocation.html
@@ -6,4 +6,4 @@
     ATTENTION: From / since June 13th 2014 the return policy option is canceled due to the adoption of the Consumer Rights Directive VRRL.
 </p>
 <hr/>
-{{block type="cms/block" block_id="revocation_form"}}
+<p>If you want to revoke the contract, then please <a href="{{store url='revocation_form'}}">fill out this form</a> and send it back to us.</p>
