--- a/src/app/locale/de_CH/template/magesetup/page/revocation_form.html
+++ b/src/app/locale/de_CH/template/magesetup/page/revocation_form.html
@@ -1,4 +1,4 @@
 <!--@title Formular zur Widerrufsbelehrung @-->
-<!--@identifier revocation_form @-->
+<!--@identifier widerrufsformular @-->
 <!--@root_template one_column @-->
 {{block type="cms/block" block_id="revocation_form"}}
