[~TASK] Fixed Typo

--- a/src/app/locale/en_US/template/magesetup/block/revocation_form.html
+++ b/src/app/locale/en_US/template/magesetup/block/revocation_form.html
@@ -2,7 +2,7 @@
 <h3 style="font-style:italic; color:red;">Model withdrawal form</h3>
 
 <p style="font-style:italic; color:red;">
-    According to recent right the consumer has to be informed about the withdrawl form before placing his order. Not to be confused with the withdrawl declaration and needs to be used independently of the declaration. Furhtermore the withdrawl form has to be provided to the consumer on a durable medium. It is appropriate to place this form beneath the withdrawl declaration so that the counsumer receives the withdrawl declaration and the withdrawl form in one document.
+    According to recent right the consumer has to be informed about the withdrawal form before placing his order. Not to be confused with the withdrawal declaration and needs to be used independently of the declaration. Furhtermore the withdrawal form has to be provided to the consumer on a durable medium. It is appropriate to place this form beneath the withdrawal declaration so that the counsumer receives the withdrawal declaration and the withdrawal form in one document.
 <hr/>
 </p>
 
