[~FEATURE] Updated Italian localization

--- a/src/app/locale/it_IT/template/magesetup/page/imprint.html
+++ b/src/app/locale/it_IT/template/magesetup/page/imprint.html
@@ -1,7 +1,7 @@
 <!--@title Note legali @-->
 <!--@identifier note-legali @-->
 <!--@root_template one_column @-->
-<h1>DISCLAIMER</h1>
+<h2><i>Si prega di inserire le informazioni del negozio qui.</i></h2>
 
 <p>I testi a seguito hanno esclusivamente scopo dimostrativo e
 devono essere sostituiti con informazioni corrette modificando
