--- a/src/app/locale/it_IT/template/magesetup/page/revocation.html
+++ b/src/app/locale/it_IT/template/magesetup/page/revocation.html
@@ -1,4 +1,4 @@
 <!--@title Diritto di recesso @-->
-<!--@identifier diritto-di-recesso @-->
+<!--@identifier diritto_di_recesso @-->
 <!--@root_template one_column @-->
 {{block type="cms/block" block_id="revocation"}}
