--- a/src/app/locale/it_IT/template/magesetup/page/business_terms.html
+++ b/src/app/locale/it_IT/template/magesetup/page/business_terms.html
@@ -1,4 +1,4 @@
-<!--@title Condizioni Generali di Vendita @-->
-<!--@identifier condizioni-generali-di-vendita @-->
+<!--@title Business Terms @-->
+<!--@identifier business_terms @-->
 <!--@root_template one_column @-->
 {{block type="cms/block" block_id="business_terms"}}
