[~FEATURE] Updated French localization

--- a/src/app/locale/fr_FR/template/magesetup/page/imprint.html
+++ b/src/app/locale/fr_FR/template/magesetup/page/imprint.html
@@ -8,7 +8,7 @@
     En aucun cas, l'association Firegento et Trusted Shop porte la responsabilité de ce texte.
 </p>
 
-<h2>Mentions légales (Patron)</h2>
+<h2>Mentions légales (example)</h2>
 
 <h3>{{block type="magesetup/imprint_field" value="shop_name"}}</h3>
 
@@ -24,14 +24,4 @@
 
 <p>{{block type="magesetup/imprint_field" value="business_rules"}}</p>
 
-<p>
-    Vous pouvez contacter nottre service clientèle pour toutes questions ou réclamations auprès du numéro de téléphone suivant: {{block type="magesetup/imprint_field" value="telephone"}} ou bien par email {{block type="magesetup/imprint_field" value="email"}} ou encore notre formulaire de contact situé sur notre site internet.
-</p>
-
-<h3>Droits d'auteur et des marques</h3>
-<p>
-    Nous, la société, sommes soucieux de prendre en compte dans toutes les publications les droits d'auteur des graphiques utilisés, des documents sonores, des séquences vidéo et textes, d'utiliser ses propres graphiques, documents sonores, séquences vidéo et textes ou d'utiliser des graphiques sans licence, des documents sonores, des séquences vidéo et des textes.<br>
- Tous les éléments de notre site protégées par des tiers relèvent des dispositions de la loi applicable sur les marques et les droits de propriété des propriétaires enregistrés respectifs.<br>
- La simple mention ne signifie pas que les marques ne sont pas protégées par des droits des tiers! Le droit d'auteur pour tout matériel créé par l'auteur reste avec la propriété de l'auteur.<br>
- Toute reproduction ou utilisation de tels graphiques, documents sonores, séquences vidéo et textes dans d'autres publications électroniques ou imprimées est interdite sans l'autorisation expresse de l'auteur
-</p>
+<p>Vous pouvez nous appeler au numéro {{block type="magesetup/imprint_field" value="telephone"}} ou nous envoyer un e-mail à {{block type="magesetup/imprint_field" value="email"}}.</p>
