--- a/src/app/locale/fr_FR/template/magesetup/agreement/business_terms.html
+++ b/src/app/locale/fr_FR/template/magesetup/agreement/business_terms.html
@@ -1,3 +1,3 @@
 <!--@name CGV @-->
-<!--@checkbox_text J'ai lu et j'approuve les conditions générales de ventes. @-->
+<!--@checkbox_text J'ai lu les conditions générales et je les accepte. @-->
 {{block type="cms/block" block_id="business_terms"}}
