--- a/src/app/locale/fr_FR/template/magesetup/agreement/revocation.html
+++ b/src/app/locale/fr_FR/template/magesetup/agreement/revocation.html
@@ -1,3 +1,3 @@
-<!--@name Conditions de retour @-->
-<!--@checkbox_text J'ai lu les conditions de retour. @-->
+<!--@name Clause de révocation @-->
+<!--@checkbox_text J'ai lu les informations de rétraction. @-->
 {{block type="cms/block" block_id="revocation"}}
