--- a/src/app/locale/fr_FR/template/magesetup/block/business_terms.html
+++ b/src/app/locale/fr_FR/template/magesetup/block/business_terms.html
@@ -1,6 +1,2 @@
-<!--@title CGV @-->
-<h2><i>Remplissez ici vos conditions générales de vente.</i></h2>
-
-<a name="retractation"></a>
-<h3>Conditions de retractions</h3>
-<p>Veuillez remplir ici vos conditions de rétractations</p>
+<!--@title Conditions générales @-->
+<h2><i>Veuillez entrer les conditions générales ici.</i></h2>
