--- a/src/app/locale/fr_FR/template/magesetup/page/404.html
+++ b/src/app/locale/fr_FR/template/magesetup/page/404.html
@@ -1,9 +1,9 @@
-<!--@title Page non trouvée @-->
+<!--@title page introuvable @-->
 <!--@identifier no-route @-->
 <!--@root_template one_column @-->
-<h2>404 - Page non trouvée</h2>
-<p>Malheureusement, la page auquelle vous souhaitez accéder n'a pu être trouvée, cela pourrait être dû à une adresse URL non correctement remplie.  C'est ainsi qu'est apparu cette erreur 404. Veuillez utiliser s'il vous plaît notre <a href="{{store url="catalogsearch/advanced"}}">moteur de recherche</a> ou bien visitez notre <a href="{{store url=""}}">page d'accueil</a> pour découvrir nos assortiments.</p>
+<h2>404 - page introuvable</h2>
+<p>Malheureusement, la page demandée n'a pas pu être trouvée. Apparemment, a été fournie à partir d'une URL incorrect.</p>
 <ul>
-    <li><a href="{{store url='catalogsearch/advanced'}}">Moteur de recherche</a></li>
+    <li><a href="{{store url='catalogsearch/advanced'}}">Recherche avancée</a></li>
     <li><a href="{{store url=''}}">Page d'accueil</a></li>
 </ul>
