--- a/src/app/locale/fr_FR/template/magesetup/page/business_terms.html
+++ b/src/app/locale/fr_FR/template/magesetup/page/business_terms.html
@@ -1,4 +1,4 @@
-<!--@title CGV @-->
-<!--@identifier cgv @-->
+<!--@title Condition générales @-->
+<!--@identifier business_terms @-->
 <!--@root_template one_column @-->
 {{block type="cms/block" block_id="business_terms"}}
