[TASK] Small layout fixes

--- a/src/app/design/frontend/base/default/template/magesetup/checkout/additional.phtml
+++ b/src/app/design/frontend/base/default/template/magesetup/checkout/additional.phtml
@@ -24,6 +24,8 @@
 ?>
 <?php if ($additional = $this->getCheckoutAdditionalInformation()): ?>
     <div class="additional-information">
-        <?php echo $additional ?>
+        <div class="info">
+            <?php echo $additional ?>
+        </div>
     </div>
 <?php endif; ?>
