--- a/src/app/design/frontend/base/default/template/magesetup/customer/form/tc-confirmation.phtml
+++ b/src/app/design/frontend/base/default/template/magesetup/customer/form/tc-confirmation.phtml
@@ -32,9 +32,9 @@ $helper = $this->helper('magesetup');
     <li class="control">
         <p class="agree">
             <?php if( $_a->getIsRequired() ): ?>
-                <input type="checkbox" id="agreement-<?php echo $_a->getId()?>" name="agreement[<?php echo $_a->getId()?>]" value="1" title="<?php echo $this->htmlEscape( $_a->getCheckboxText() ) ?>" class="checkbox required-entry"/>
+                <input type="checkbox" id="agreement-<?php echo $_a->getId()?>" name="agreement[<?php echo $_a->getId()?>]" value="1" title="<?php echo $this->escapeHtml( $_a->getCheckboxText() ) ?>" class="checkbox required-entry"/>
             <?php endif; ?>
-            <label <?php if( $_a->getIsRequired() ): ?>for="agreement-<?php echo $_a->getId()?>"<?php endif; ?> style="float:none;"><?php echo $_a->getIsHtml() ? $_a->getCheckboxText() : $this->htmlEscape( $_a->getCheckboxText() ) ?></label>
+            <label <?php if( $_a->getIsRequired() ): ?>for="agreement-<?php echo $_a->getId()?>"<?php endif; ?> style="float:none;"><?php echo $_a->getIsHtml() ? $_a->getCheckboxText() : $this->escapeHtml( $_a->getCheckboxText() ) ?></label>
             <a href="<?php echo $helper->getAgreementUrl( $_a ) ?>" onclick="window.open(this.href, '', 'width=600,height=600,left=0,top=0,location=no,status=yes,scrollbars=yes,resizable=yes').focus(); return false;"><?php echo $this->__( '[Show]' ) ?></a>
         </p>
     </li>
