Added support for the attribute type "select" for delivery time attribute.

--- a/src/app/design/frontend/base/default/template/magesetup/delivery_time.phtml
+++ b/src/app/design/frontend/base/default/template/magesetup/delivery_time.phtml
@@ -24,6 +24,6 @@
 ?>
 <?php if ($this->getProduct()->getDeliveryTime()): ?>
     <p class="delivery-time">
-        <?php echo $this->__('Delivery Time') ?>: <?php echo $this->getProduct()->getDeliveryTime() ?>
+        <?php echo $this->__('Delivery Time') ?>: <?php echo Mage::helper('magesetup')->getDeliveryTimeFromProduct($this->getProduct()) ?>
     </p>
 <?php endif ?>
