Fixed English & French Withdrawal translations
English: Withdrawal, not Revocation (also for the forms)
French: Rétractation, c’est ne pas révocation (aussi pour les
formulaires)

--- a/src/app/locale/en_US/template/magesetup/block/revocation_form.html
+++ b/src/app/locale/en_US/template/magesetup/block/revocation_form.html
@@ -1,5 +1,5 @@
 <!--@title Withdrawal Form @-->
-<h3 style="font-style:italic; color:red;">Model withdrawal form</h3>
+<h3 style="font-style:italic; color:red;">Model Withdrawal Form</h3>
 
 <p style="font-style:italic; color:red;">
     According to recent right the consumer has to be informed about the withdrawal form before placing his order. Not to be confused with the withdrawal declaration and needs to be used independently of the declaration. Furhtermore the withdrawal form has to be provided to the consumer on a durable medium. It is appropriate to place this form beneath the withdrawal declaration so that the counsumer receives the withdrawal declaration and the withdrawal form in one document.
