--- a/src/app/locale/en_US/template/magesetup/page/revocation_form.html
+++ b/src/app/locale/en_US/template/magesetup/page/revocation_form.html
@@ -1,4 +1,4 @@
-<!--@title Formular zur Widerrufsbelehrung @-->
+<!--@title Withdrawal Form @-->
 <!--@identifier revocation_form @-->
 <!--@root_template one_column @-->
 {{block type="cms/block" block_id="revocation_form"}}
