--- a/src/app/locale/fr_FR/template/magesetup/block/revocation_form.html
+++ b/src/app/locale/fr_FR/template/magesetup/block/revocation_form.html
@@ -1,8 +1,8 @@
-<!--@title Formulaire de révocation @-->
-<h3 style="font-style:italic; color:red;">Exemple formulaire de révocation</h3>
+<!--@title Formulaire de rétractation @-->
+<h3 style="font-style:italic; color:red;">Modèle de formulaire de rétractation</h3>
 
 <p style="font-style:italic; color:red;">
-    Selon le nouveau droit, le client doit être informé à l'aide d'un formulaire de révocation de ses droits de révocation avant de passer une commande. Celui-ci ne doit pas être en contradiction avec l'information de révocation et doit être employeé toujours indépendamment de la forme de l'information. En plus du formulaire de révocation, celui-ci doit être mis à la diposition du client sur un support de données durable. Il est recommandé de lister le formulaire sous l'information de révocation de sorte que le client puisse obtenir les informations de révocation en combinaison avec le formularie de révocation dans un même document.
+    Selon le nouveau droit, le client doit être informé à l'aide d'un formulaire de rétractation de ses droits de rétractation avant de passer une commande. Celui-ci ne doit pas être en contradiction avec l'information de rétractation et doit être employeé toujours indépendamment de la forme de l'information. En plus du formulaire de rétractation, celui-ci doit être mis à la diposition du client sur un support de données durable. Il est recommandé de lister le formulaire sous l'information de rétractation de sorte que le client puisse obtenir les informations de rétractation en combinaison avec le formularie de rétractation dans un même document.
 <hr/>
 </p>
 
@@ -20,7 +20,7 @@
     ou par courriel à: <strong>{{block type="magesetup/imprint_field" value="email"}}</strong>
 </p>
 <p>
-    Je/ Nous <sup>*</sup> notifie/nofifions par la présente ma/notre rétraction du contrat portant sur la vente du bien/la prestaion de service suivant<sup>*</sup>.
+    Je/ Nous <sup>*</sup> notifie/nofifions par la présente ma/notre rétractation du contrat portant sur la vente du bien/la prestaion de service suivant<sup>*</sup>.
 </p>
 <p style="min-height:200px;">
     &nbsp;
