--- a/src/app/locale/fr_FR/template/magesetup/page/revocation_form.html
+++ b/src/app/locale/fr_FR/template/magesetup/page/revocation_form.html
@@ -1,4 +1,4 @@
-<!--@title Formulaire de révocation @-->
+<!--@title Formulaire de rétractation @-->
 <!--@identifier revocation_form @-->
 <!--@root_template one_column @-->
 {{block type="cms/block" block_id="revocation_form"}}
