--- a/src/app/locale/en_US/template/magesetup/block/revocation.html
+++ b/src/app/locale/en_US/template/magesetup/block/revocation.html
@@ -1,9 +1,9 @@
-<!--@title Revocation @-->
+<!--@title Withdrawal @-->
 <h3 style="color:red;">
-    <em>Please insert your Declaration of Revocation here. Avoid conflicting information on the right of withdrawal on other info pages.</em>
+    <em>Please insert your Declaration of Withdrawal here. Avoid conflicting information on the right of withdrawal on other info pages.</em>
 </h3>
 <p style="font-style:italic; color:red;">
     ATTENTION: From / since June 13th 2014 the return policy option is canceled due to the adoption of the Consumer Rights Directive VRRL.
 </p>
 <hr/>
-<p><a href="{{store url='revocation_form'}}">Sample Revocation Form</a></p>
+<p><a href="{{store url='revocation_form'}}">Model Withdrawal Form</a></p>
