--- a/src/app/locale/en_US/template/magesetup/page/revocation.html
+++ b/src/app/locale/en_US/template/magesetup/page/revocation.html
@@ -1,4 +1,4 @@
-<!--@title Revocation @-->
+<!--@title Withdrawal @-->
 <!--@identifier revocation @-->
 <!--@root_template one_column @-->
 {{block type="cms/block" block_id="revocation"}}
