--- a/src/app/locale/fr_CH/template/magesetup/block/business_terms.html
+++ b/src/app/locale/fr_CH/template/magesetup/block/business_terms.html
@@ -2,5 +2,5 @@
 <h2><i>Remplissez ici vos conditions générales de vente.</i></h2>
 
 <a name="retractation"></a>
-<h3>Conditions de retractions</h3>
-<p>Veuillez remplir ici vos conditions de rétractations</p>
+<h3>Conditions de rétractation</h3>
+<p>Veuillez remplir ici vos conditions de rétractation</p>
