--- a/src/app/locale/fr_FR/template/magesetup/block/revocation.html
+++ b/src/app/locale/fr_FR/template/magesetup/block/revocation.html
@@ -1,9 +1,9 @@
-<!--@title information sur le droit de révocation @-->
+<!--@title information sur le droit de rétractation @-->
 <h3 style="color:red;">
-    <em>Veulliez entrer vos informations de révocation ici. Évitez les informations contradictoires sur la révocation sur les autres pages.</em>
+    <em>Veulliez entrer vos informations de rétractation ici. Évitez les informations contradictoires sur la rétractation sur les autres pages.</em>
 </h3>
 <p style="font-style:italic; color:red;">
     ATTENTION: depuis le 13 juin 2014, l'option du droit de retour est supprimé en raison de l'entrée en vigueur de la directive de droit des consommateurs.
 </p>
 <hr/>
-<p><a href="{{store url='revocation_form'}}">Exemple formulaire de révocation</a></p>
+<p><a href="{{store url='revocation_form'}}">Modèle de formulaire de rétractation</a></p>
