--- a/src/app/locale/fr_FR/template/magesetup/page/revocation.html
+++ b/src/app/locale/fr_FR/template/magesetup/page/revocation.html
@@ -1,4 +1,4 @@
-<!--@title Révocation @-->
+<!--@title Rétractation @-->
 <!--@identifier revocation @-->
 <!--@root_template one_column @-->
 {{block type="cms/block" block_id="revocation"}}
