--- a/src/app/locale/ru_RU/template/magesetup/block/revocation.html
+++ b/src/app/locale/ru_RU/template/magesetup/block/revocation.html
@@ -6,4 +6,4 @@
     ATTENTION: From / since June 13th 2014 the return policy option is canceled due to the adoption of the Consumer Rights Directive VRRL.
 </p>
 <hr/>
-<p><a href="{{store url='revocation_form'}}">Sample Revocation Form</a></p>
+<p><a href="{{store url='revocation_form'}}">Model Withdrawal Form</a></p>
