removes year from copyright notice

--- a/src/app/design/frontend/base/default/template/magesetup/contacts/form.phtml
+++ b/src/app/design/frontend/base/default/template/magesetup/contacts/form.phtml
@@ -13,7 +13,7 @@
  * @category  FireGento
  * @package   FireGento_MageSetup
  * @author    FireGento Team <team@firegento.com>
- * @copyright 2016 FireGento Team (http://www.firegento.com)
+ * @copyright FireGento Team (http://www.firegento.com)
  * @license   http://opensource.org/licenses/gpl-3.0 GNU General Public License, version 3 (GPLv3)
  */
 ?>
