fixed translation config, fixes #301

--- a/src/app/design/adminhtml/default/default/template/magesetup/form.phtml
+++ b/src/app/design/adminhtml/default/default/template/magesetup/form.phtml
@@ -177,7 +177,7 @@
                                 <input type="checkbox" name="agreements" id="checkbox_agreements" value="1" checked="checked" />
                             </td>
                             <td class="value">
-                                <?php echo $this->__('Conditions') ?>
+                                <?php echo $this->__('i.e. terms and conditions, cancellation policy') ?>
                             </td>
                         </tr>
                         <tr>
