removed test class

--- a/src/app/design/frontend/base/default/template/magesetup/contacts/form.phtml
+++ b/src/app/design/frontend/base/default/template/magesetup/contacts/form.phtml
@@ -18,7 +18,7 @@
  */
 ?>
 <div id="messages_product_view"><?php echo $this->getMessagesBlock()->toHtml() ?></div>
-<div class="page-title test">
+<div class="page-title">
     <h1><?php echo Mage::helper('contacts')->__('Contact Us') ?></h1>
 </div>
 <form action="<?php echo $this->getFormAction(); ?>" id="contactForm" method="post">
